checkpoint: L02 PASSED (252s)